# words_cli

./: .gitignore  Cargo.toml  README.md
docs/: PKGBUILD  todo.md
src/: actions.rs  cache.rs  config.rs  dict.rs  dict_api.rs  formatter.rs  main.rs  spell.rs  test_utils.rs  utils.rs  world.rs
test/words_cli/cache/: monster
