[package]
name = "words_cli"
version = "0.1.0"
authors = ["chrisrhayden <chrisrhayden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0.57"
serde = { version = "1.*", features = ["derive"] }
